--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <nav class="max-w-[var(--max-width)] w-full mx-auto flex items-center justify-between">
             <h1 class="flex text-black-1 items-center">
                 <img class="mr-1" src="./images/logo-header.png" alt="">
-                <p class="text-2xl max-md:hidden">Browse<span class="text-[#FFDC26]">4</span>Pets</p> 
+                <p class="text-2xl max-md:hidden">Browse<span class="text-[#FFDC26]">4</span>Pets</p>
             </h1>
             <ul class="flex gap-4 text-xl max-md:hidden">
                 <li><a href="">Find a pet</a></li>
@@ -55,11 +55,24 @@
         </nav>
     </header>
 
-    <!-- Start Main Content -->
-    <main>
-
-    </main>
-
+    <!-- Start Banner -->
+    <section class="max-w-[var(--max-width)] mx-auto px-5">
+        <div class="relative pt-14 max-md:pt-6 max-h-[749px] mb-32 max-md:mb-12">
+            <div class="absolute max-md:relative">
+                <h2 class="font-adlam text-[56px] mb-2 max-md:text-3xl">Pamper Your Pet,<br> Because They Deserve<br>
+                    the Bes</h2>
+                <p class="md:text-xl max-w-2xl max-md:max-w-[350px] mb-6">Discover a world of treats, toys, and
+                    essentials handpicked for your furry friends. Shop now and make
+                    tails wag with joy!</p>
+                <button class="mr-2  px-7 py-2 rounded-lg bg-[#FFDC26] border border-[#FFDC26]">Find a pet</button>
+            </div>
+            <img class="max-md:mt-[-80px]" src="./images/cat-big.png" alt="">
+        </div>
+    </section>
+    <!-- Start Browse By Categories -->
+    <section class="max-w-[var(--max-width)] mx-auto px-5">
+        <h3 class="font-adlam text-4xl mb-2 max-md:text-2xl">Browse By Categories</h3>
+    </section>
     <!-- Start Footer -->
     <footer>
 
