--- a/index.html
+++ b/index.html
@@ -70,12 +70,44 @@
         </div>
     </section>
     <!-- Start Browse By Categories -->
-    <section class="max-w-[var(--max-width)] mx-auto px-5">
-        <h3 class="font-adlam text-4xl mb-2 max-md:text-2xl">Browse By Categories</h3>
+    <section class="max-w-[var(--max-width)] mx-auto px-5 mb-14 md:mb-32">
+        <h3 class="font-adlam text-4xl mb-6 max-md:text-2xl">Browse By Categories</h3>
+        <ul class="grid grid-cols-6 max-md:grid-cols-2 gap-6">
+            <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
+                <span class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img src="./images/dog-cartoon.png" alt=""></span>
+                <h5 class="font-adlam text-xl">Dog</h5>
+                <p>3 items</p>
+            </li>
+            <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
+                <span class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img src="./images/dog-cartoon.png" alt=""></span>
+                <h5 class="font-adlam text-xl">Fish</h5>
+                <p>3 items</p>
+            </li>
+            <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
+                <span class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img src="./images/dog-cartoon.png" alt=""></span>
+                <h5 class="font-adlam text-xl">Cat</h5>
+                <p>3 items</p>
+            </li>
+            <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
+                <span class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img src="./images/dog-cartoon.png" alt=""></span>
+                <h5 class="font-adlam text-xl">Dog</h5>
+                <p>3 items</p>
+            </li>
+            <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
+                <span class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img src="./images/dog-cartoon.png" alt=""></span>
+                <h5 class="font-adlam text-xl">Dog</h5>
+                <p>3 items</p>
+            </li>
+            <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
+                <span class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img src="./images/dog-cartoon.png" alt=""></span>
+                <h5 class="font-adlam text-xl">Dog</h5>
+                <p>3 items</p>
+            </li>
+        </ul>
     </section>
     <!-- Start Footer -->
     <footer>
-
+        Footer
     </footer>
 </body>
 
