--- a/index.html
+++ b/index.html
@@ -56,54 +56,204 @@
     </header>
 
     <!-- Start Banner -->
-    <section class="max-w-[var(--max-width)] mx-auto px-5">
-        <div class="relative pt-14 max-md:pt-6 max-h-[749px] mb-32 max-md:mb-12">
-            <div class="absolute max-md:relative">
-                <h2 class="font-adlam text-[56px] mb-2 max-md:text-3xl">Pamper Your Pet,<br> Because They Deserve<br>
-                    the Bes</h2>
-                <p class="md:text-xl max-w-2xl max-md:max-w-[350px] mb-6">Discover a world of treats, toys, and
-                    essentials handpicked for your furry friends. Shop now and make
-                    tails wag with joy!</p>
-                <button class="mr-2  px-7 py-2 rounded-lg bg-[#FFDC26] border border-[#FFDC26]">Find a pet</button>
+    <section class="px-5">
+        <div class="max-w-[var(--max-width)] mx-auto">
+            <div class="relative pt-14 max-md:pt-6 max-h-[749px] mb-32 max-md:mb-12">
+                <div class="absolute max-md:relative">
+                    <h2 class="font-adlam text-[56px] mb-2 max-md:text-3xl">Pamper Your Pet,<br> Because They
+                        Deserve<br>
+                        the Bes</h2>
+                    <p class="md:text-xl max-w-2xl max-md:max-w-[350px] mb-6">Discover a world of treats, toys, and
+                        essentials handpicked for your furry friends. Shop now and make
+                        tails wag with joy!</p>
+                    <button class="mr-2  px-7 py-2 rounded-lg bg-[#FFDC26] border border-[#FFDC26]">Find a pet</button>
+                </div>
+                <img class="max-md:mt-[-80px]" src="./images/cat-big.png" alt="">
             </div>
-            <img class="max-md:mt-[-80px]" src="./images/cat-big.png" alt="">
         </div>
     </section>
     <!-- Start Browse By Categories -->
-    <section class="max-w-[var(--max-width)] mx-auto px-5 mb-14 md:mb-32">
-        <h3 class="font-adlam text-4xl mb-6 max-md:text-2xl">Browse By Categories</h3>
-        <ul class="grid grid-cols-6 max-md:grid-cols-2 gap-6">
-            <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
-                <span class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img src="./images/dog-cartoon.png" alt=""></span>
-                <h5 class="font-adlam text-xl">Dog</h5>
-                <p>3 items</p>
-            </li>
-            <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
-                <span class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img src="./images/dog-cartoon.png" alt=""></span>
-                <h5 class="font-adlam text-xl">Fish</h5>
-                <p>3 items</p>
-            </li>
-            <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
-                <span class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img src="./images/dog-cartoon.png" alt=""></span>
-                <h5 class="font-adlam text-xl">Cat</h5>
-                <p>3 items</p>
-            </li>
-            <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
-                <span class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img src="./images/dog-cartoon.png" alt=""></span>
-                <h5 class="font-adlam text-xl">Dog</h5>
-                <p>3 items</p>
-            </li>
-            <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
-                <span class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img src="./images/dog-cartoon.png" alt=""></span>
-                <h5 class="font-adlam text-xl">Dog</h5>
-                <p>3 items</p>
-            </li>
-            <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
-                <span class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img src="./images/dog-cartoon.png" alt=""></span>
-                <h5 class="font-adlam text-xl">Dog</h5>
-                <p>3 items</p>
-            </li>
-        </ul>
+    <section class=" px-5 mb-14 md:mb-32">
+        <div class="max-w-[var(--max-width)] mx-auto">
+            <h3 class="font-adlam text-4xl mb-6 max-md:text-2xl">Browse By Categories</h3>
+            <ul class="grid grid-cols-6 max-md:grid-cols-2 gap-6">
+                <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
+                    <span
+                        class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img
+                            src="./images/dog-cartoon.png" alt=""></span>
+                    <h5 class="font-adlam text-xl">Dog</h5>
+                    <p>3 items</p>
+                </li>
+                <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
+                    <span
+                        class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img
+                            src="./images/dog-cartoon.png" alt=""></span>
+                    <h5 class="font-adlam text-xl">Fish</h5>
+                    <p>3 items</p>
+                </li>
+                <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
+                    <span
+                        class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img
+                            src="./images/dog-cartoon.png" alt=""></span>
+                    <h5 class="font-adlam text-xl">Cat</h5>
+                    <p>3 items</p>
+                </li>
+                <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
+                    <span
+                        class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img
+                            src="./images/dog-cartoon.png" alt=""></span>
+                    <h5 class="font-adlam text-xl">Dog</h5>
+                    <p>3 items</p>
+                </li>
+                <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
+                    <span
+                        class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img
+                            src="./images/dog-cartoon.png" alt=""></span>
+                    <h5 class="font-adlam text-xl">Dog</h5>
+                    <p>3 items</p>
+                </li>
+                <li class="bg-[#F9DF8A] h-64 text-center rounded-xl py-8 grid-cols-2">
+                    <span
+                        class="flex w-[104px] h-[104px] items-center bg-white rounded-full justify-center mb-6 mx-auto"><img
+                            src="./images/dog-cartoon.png" alt=""></span>
+                    <h5 class="font-adlam text-xl">Dog</h5>
+                    <p>3 items</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <!-- Start Trending Pet Product -->
+    <section class="md:bg-[#FFF9F4] px-5 py-8 md:py-32">
+        <div class="max-w-[var(--max-width)] mx-auto">
+            <h3 class="font-adlam text-4xl mb-6 max-md:text-2xl">Trending Pet Products</h3>
+            <div class="grid gap-6 grid-cols-[2fr_1fr_1fr_1fr] grid-rows-[118px_118px_118px]
+            max-md:grid-cols-2 max-md:grid-rows-[339px_auto_auto_auto_auto]">
+                <div class="max-md:col-span-2 md:row-span-3 bg-[#F9DF8A] rounded-lg">
+                    <div class="p-6">
+                        <h4 class="font-adlam text-4xl mb-6 max-md:text-3xl">T- Shirt For Dogs</h4>
+                        <p class="mb-5">Discover a world of treats, toys, and essentials handpicked for </p>
+                        <button class="mr-2  px-7 py-2 rounded-lg bg-[#fff]">Shop Now</button>
+                    </div>
+                </div>
+                <div class="bg-[#fff] rounded-lg border border-[rgba(17, 17, 17, 0.10)] p-4 flex">
+                    <span class="mr-2 flex items-center justify-center bg-[#FFF9F4] rounded-lg w-[86px] h-[86px]">
+                        <img src="./images/dog-cartoon.png" alt="">
+                    </span>
+                    <div>
+                        <span class="flex items-center mb-1">
+                            <img class="mr-1" src="./images/star.png" alt="">
+                            4.5
+                        </span>
+                        <b class="mb-1">Pet Bed</b>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-[#fff] rounded-lg border border-[rgba(17, 17, 17, 0.10)] p-4 flex">
+                    <span class="mr-2 flex items-center justify-center bg-[#FFF9F4] rounded-lg w-[86px] h-[86px]">
+                        <img src="./images/dog-cartoon.png" alt="">
+                    </span>
+                    <div>
+                        <span class="flex items-center mb-1">
+                            <img class="mr-1" src="./images/star.png" alt="">
+                            4.5
+                        </span>
+                        <b class="mb-1">Pet Bed</b>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-[#fff] rounded-lg border border-[rgba(17, 17, 17, 0.10)] p-4 flex">
+                    <span class="mr-2 flex items-center justify-center bg-[#FFF9F4] rounded-lg w-[86px] h-[86px]">
+                        <img src="./images/dog-cartoon.png" alt="">
+                    </span>
+                    <div>
+                        <span class="flex items-center mb-1">
+                            <img class="mr-1" src="./images/star.png" alt="">
+                            4.5
+                        </span>
+                        <b class="mb-1">Pet Bed</b>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-[#fff] rounded-lg border border-[rgba(17, 17, 17, 0.10)] p-4 flex">
+                    <span class="mr-2 flex items-center justify-center bg-[#FFF9F4] rounded-lg w-[86px] h-[86px]">
+                        <img src="./images/dog-cartoon.png" alt="">
+                    </span>
+                    <div>
+                        <span class="flex items-center mb-1">
+                            <img class="mr-1" src="./images/star.png" alt="">
+                            4.5
+                        </span>
+                        <b class="mb-1">Pet Bed</b>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-[#fff] rounded-lg border border-[rgba(17, 17, 17, 0.10)] p-4 flex">
+                    <span class="mr-2 flex items-center justify-center bg-[#FFF9F4] rounded-lg w-[86px] h-[86px]">
+                        <img src="./images/dog-cartoon.png" alt="">
+                    </span>
+                    <div>
+                        <span class="flex items-center mb-1">
+                            <img class="mr-1" src="./images/star.png" alt="">
+                            4.5
+                        </span>
+                        <b class="mb-1">Pet Bed</b>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-[#fff] rounded-lg border border-[rgba(17, 17, 17, 0.10)] p-4 flex">
+                    <span class="mr-2 flex items-center justify-center bg-[#FFF9F4] rounded-lg w-[86px] h-[86px]">
+                        <img src="./images/dog-cartoon.png" alt="">
+                    </span>
+                    <div>
+                        <span class="flex items-center mb-1">
+                            <img class="mr-1" src="./images/star.png" alt="">
+                            4.5
+                        </span>
+                        <b class="mb-1">Pet Bed</b>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-[#fff] rounded-lg border border-[rgba(17, 17, 17, 0.10)] p-4 flex">
+                    <span class="mr-2 flex items-center justify-center bg-[#FFF9F4] rounded-lg w-[86px] h-[86px]">
+                        <img src="./images/dog-cartoon.png" alt="">
+                    </span>
+                    <div>
+                        <span class="flex items-center mb-1">
+                            <img class="mr-1" src="./images/star.png" alt="">
+                            4.5
+                        </span>
+                        <b class="mb-1">Pet Bed</b>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-[#fff] rounded-lg border border-[rgba(17, 17, 17, 0.10)] p-4 flex">
+                    <span class="mr-2 flex items-center justify-center bg-[#FFF9F4] rounded-lg w-[86px] h-[86px]">
+                        <img src="./images/dog-cartoon.png" alt="">
+                    </span>
+                    <div>
+                        <span class="flex items-center mb-1">
+                            <img class="mr-1" src="./images/star.png" alt="">
+                            4.5
+                        </span>
+                        <b class="mb-1">Pet Bed</b>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-[#fff] rounded-lg border border-[rgba(17, 17, 17, 0.10)] p-4 flex max-md:hidden">
+                    <span class="mr-2 flex items-center justify-center bg-[#FFF9F4] rounded-lg w-[86px] h-[86px]">
+                        <img src="./images/dog-cartoon.png" alt="">
+                    </span>
+                    <div>
+                        <span class="flex items-center mb-1">
+                            <img class="mr-1" src="./images/star.png" alt="">
+                            4.5
+                        </span>
+                        <b class="mb-1">Pet Bed</b>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- Start Footer -->
     <footer>
