--- a/index.html
+++ b/index.html
@@ -255,9 +255,83 @@
             </div>
         </div>
     </section>
+    <!-- Everyday Low Price -->
+    <section class="md:bg-[#fff] px-5 py-8 md:py-32">
+        <div class="max-w-[var(--max-width)] mx-auto">
+            <h3 class="font-adlam text-4xl mb-6 max-md:text-2xl">Everyday low Price</h3>
+            <div class="flex gap-6 max-md:flex-col">
+                <div class="w-full max-w-[784px] rounded-xl bg-gradient-to-r from-[#F8CCFB] to-[#ACD2FD]">
+                    <div class="flex justify-between items-center">
+                        <div class="pl-20 font-adlam">
+                            <span class="text-xl font-sora max-md:hidden">Under Price</span>
+                            <h5 class="text-3xl">Pet Grooming Mitt</h5>
+                            <span class="block text-2xl text-white mb-2 max-md:hidden">(Easy Hair Removal)</span>
+                            <h4 class="text-5xl max-md:text-white">$7.99</h4>
+                        </div>
+                        <div>
+                            <img src="./images/cute-dog-mid.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full max-w-[512px] rounded-xl bg-gradient-to-r from-[#FFF9F4] to-[#F9DF8A]">
+                    <div class="">
+                        <div class="pl-12 pt-12 font-adlam">
+                            <h5 class="text-3xl mb-2">T-Shirt for Dogs</h5>
+                            <h4 class="text-5xl text-[#FFDC26]">$7.99</h4>
+                        </div>
+                        <div class="text-right">
+                            <img class="ml-auto" src="./images/cute-pet-mid.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Get Pawsom News -->
+    <section class="px-5 relative">
+        <div class="max-w-[var(--max-width)] mx-auto bg-[#FFF9F4] rounded-2xl py-9 -mb-40">
+            <div class="md:flex py-9 px-20">
+                <div class="max-w-[330px]">
+                    <img src="./images/cute-pet-mid.png" alt="">
+                </div>
+                <div class="md:pl-28">
+                    <h3 class="font-adlam text-4xl mb-4">Get Pawsome News!</h3>
+                    <p class="mb-5">Exclusive training tips, ticks, product deals and more.</p>
+                    <input class="bg-white h-16 px-4 rounded-lg block mb-5 md:w-[472px]" type="text" placeholder="Enter email....">
+                    <button class="mr-2  px-7 py-2 rounded-lg bg-[#FFDC26] border border-[#FFDC26]">Subscribe</button>
+                </div>
+            </div>
+         </div>
+    </section>        
     <!-- Start Footer -->
-    <footer>
-        Footer
+    <footer class="bg-yellow-400 bg-opacity-50 px-5 pb-8 pt-60">
+        <div class="max-w-[var(--max-width)] mx-auto">
+            <div class="md:flex md:justify-between md:items-end">
+                <div>
+                    <h1 class="flex text-black-1 items-center mb-4">
+                        <img class="mr-1" src="./images/logo-footer.png" alt="">
+                        <p class="text-2xl max-md:hidden">Browse<span class="text-[#FFDC26]">4</span>Pets</p>
+                    </h1>
+                    <p class="text-xl max-w-[426px]">
+                        Discover a world of treats, toys, and essentials handpicked for your furry friends
+                    </p>
+                </div>
+                <ul>
+                    <li class="mb-6"><a href="">Find a pet</a></li>
+                    <li class="mb-6"><a href="">Breeds</a></li>
+                    <li><a href="">Contact us</a></li>
+                </ul>
+                <div>
+                    <h5 class="mb-2">Follow Us</h5>
+                    <p class="flex gap-6">
+                        <a href=""><img src="./images/f-icon.png" alt=""></a>
+                        <a href=""><img src="./images/ins-icon.png" alt=""></a>
+                        <a href=""><img src="./images/li-icon.png" alt=""></a>
+                        <a href=""><img src="./images/y-icon.png" alt=""></a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
